# vacuum_robot

ros2_control_demos/: package.xml
vacuum_robot/: CMakeLists.txt  README.md  package.xml  vacuum_robot.xml
vacuum_robot/bringup/config/: diffbot_controllers.yaml
vacuum_robot/bringup/launch/: rrbot.launch.py  rrbot_gazebo.launch.py  test_forward_position_controller.launch.py
vacuum_robot/description/core/: camera.xacro  lidar.xacro  robot_core.xacro
vacuum_robot/description/gazebo/: rrbot.gazebo.xacro
vacuum_robot/description/launch/: view_robot.launch.py
vacuum_robot/description/ros2_control/: rrbot.ros2_control.xacro
vacuum_robot/description/urdf/: rrbot.urdf.xacro
vacuum_robot/doc/: userdoc.rst
vacuum_robot/hardware/: rrbot.cpp
vacuum_robot/hardware/include/vacuum_robot/: rrbot.hpp
vacuum_robot/test/: test_rrbot_gazebo_launch.py  test_rrbot_launch.py  test_urdf_xacro.py  test_view_robot_launch.py
